--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hengdang</title>
     <link rel="stylesheet" href="image-alt.css" />
+    <link rel="icon" href="/assets/logo-white.svg">
     <script src="tailwind.js"></script>
-
     <script>
       tailwind.config = {
         theme: {
